<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>EconomyCore</artifactId>
    <packaging>jar</packaging>
    <name>The New Economy Core</name>

    <properties>
        <tne.relocation>net.tnemc.libs.</tne.relocation>
    </properties>

    <repositories>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>TNIL-Core</artifactId>
            <version>0.1.5.0</version>
            <scope>compile</scope>
        </dependency>
        <!-- JSON for the tech stuff -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
            <scope>compile</scope>
        </dependency>
        <!-- Database Stuff is Fun -->
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>idb-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <!-- Pooling For Performance -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>4.0.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.carleslc.Simple-YAML</groupId>
            <artifactId>Simple-Yaml</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.10.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.1.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.3.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-core</artifactId>
            <version>1.7.0</version>
        </dependency>
        <dependency>
            <groupId>cloud.commandframework</groupId>
            <artifactId>cloud-annotations</artifactId>
            <version>1.7.0</version>
        </dependency>
    </dependencies>

    <parent>
        <groupId>net.tnemc</groupId>
        <artifactId>TNE</artifactId>
        <version>0.1.2.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <directory>target</directory>
        <outputDirectory>target/classes</outputDirectory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testOutputDirectory>target/test-classes</testOutputDirectory>
        <sourceDirectory>src/</sourceDirectory>
        <testSourceDirectory>test/</testSourceDirectory>
        <resources>
            <resource>
                <directory>resources/</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>3.0.0-M7</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <show>public</show>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <artifactSet>
                        <includes>
                            <include>org.json.simple:*</include>
                            <include>com.zaxxer:*</include>
                            <include>co.aikar:*</include>
                            <include>cloud.commandframework:*</include>
                            <include>me.carleslc:*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>org.json.simple</pattern>
                            <shadedPattern>${tne.relocation}.json</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer</pattern>
                            <shadedPattern>${tne.relocation}.zaxxer</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>me.carleslc.Simple-YAML</pattern>
                            <shadedPattern>${tne.relocation}.yaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>cloud.commandframework</pattern>
                            <shadedPattern>${tne.relocation}.cloud</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.idb-core</pattern>
                            <shadedPattern>${tne.relocation}.idb</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
